force-app/main/default/objects/EM_Expense__c/EM_Expense__c.object-meta.xml
<CustomObject>
    <description>Expense custom object</description>
    <label>EM_Expense</label>
    <nameField>
        <displayFormat>E-{00000}</displayFormat>
        <label>EM_Expense Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>EM_Expenses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>