force-app/main/default/objects/EM_Expense__c/fields/Amount__c.field-meta.xml
<CustomField>
    <fullName>Amount__c</fullName>
    <label>Amount</label>
    <precision>9</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>