force-app/main/default/objects/EM_Expense__c/fields/EM_Attendees__c.field-meta.xml
<CustomField>
    <fullName>EM_Attendees__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Attendees</label>
    <referenceTo>User</referenceTo>
    <relationshipName>EM_Expenses</relationshipName>
    <type>Lookup</type>
</CustomField>