force-app/main/default/objects/EM_Expense__c/fields/EM_Discription__c.field-meta.xml
<CustomField>
    <fullName>EM_Discription__c</fullName>
    <label>Discription</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>