force-app/main/default/objects/EM_Expense__c/fields/EM_Expense_Label__c.field-meta.xml
<CustomField>
    <fullName>EM_Expense_Label__c</fullName>
    <label>Expense Label</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>