force-app/main/default/objects/EM_Expense__c/fields/EM_Purchase_Date__c.field-meta.xml
<CustomField>
    <fullName>EM_Purchase_Date__c</fullName>
    <label>Purchase Date</label>
    <type>Date</type>
</CustomField>