force-app/main/default/objects/EM_Expense__c/fields/EM_Purpose_Of_Expenses__c.field-meta.xml
<CustomField>
    <fullName>EM_Purpose_Of_Expenses__c</fullName>
    <label>Purpose Of Expenses</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Corporate expenses</fullName>
            </value>
            <value>
                <fullName>Delivery</fullName>
            </value>
            <value>
                <fullName>Office expenses</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Rest</fullName>
            </value>
            <value>
                <fullName>Transport</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>