force-app/main/default/objects/EM_Expense__c/fields/EM_Reimbursement_Amount__c.field-meta.xml
<CustomField>
    <fullName>EM_Reimbursement_Amount__c</fullName>
    <label>Reimbursement Amount</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>