force-app/main/default/objects/EM_Expense__c/fields/EM_Reimbursement_By__c.field-meta.xml
<CustomField>
    <fullName>EM_Reimbursement_By__c</fullName>
    <label>Reimbursement By</label>
    <length>30</length>
    <type>Text</type>
</CustomField>