force-app/main/default/objects/EM_Expense__c/fields/EM_Reimbursement_Status__c.field-meta.xml
<CustomField>
    <fullName>EM_Reimbursement_Status__c</fullName>
    <label>Reimbursement status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
                <default>true</default>
                <label>Pending</label>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Reimbursed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>