force-app/main/default/objects/EM_Expense__c/fields/EM_Report__c.field-meta.xml
<CustomField>
    <fullName>EM_Report__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Report</label>
    <referenceTo>EM_Report__c</referenceTo>
    <relationshipName>EM_Expenses</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>