force-app/main/default/objects/EM_Expense__c/fields/EM_Transaction_Currency__c.field-meta.xml
<CustomField>
    <fullName>EM_Transaction_Currency__c</fullName>
    <label>Transaction Currency</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AUD</fullName>
                <default>true</default>
                <label>AUD</label>
            </value>
            <value>
                <fullName>BYN</fullName>
            </value>
            <value>
                <fullName>CHF</fullName>
            </value>
            <value>
                <fullName>CNY</fullName>
            </value>
            <value>
                <fullName>EUR</fullName>
            </value>
            <value>
                <fullName>INR</fullName>
            </value>
            <value>
                <fullName>JPY</fullName>
            </value>
            <value>
                <fullName>KZT</fullName>
            </value>
            <value>
                <fullName>PLN</fullName>
            </value>
            <value>
                <fullName>RUB</fullName>
            </value>
            <value>
                <fullName>SEK</fullName>
            </value>
            <value>
                <fullName>UAH</fullName>
            </value>
            <value>
                <fullName>USD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>