force-app/main/default/objects/EM_Expense__c/fields/EM_Vendor__c.field-meta.xml
<CustomField>
    <fullName>EM_Vendor__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Vendor</label>
    <referenceTo>EM_Vendor__c</referenceTo>
    <relationshipLabel>EM_Expenses</relationshipLabel>
    <relationshipName>EM_Expenses</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>