force-app/main/default/objects/EM_Expense__c/fields/Expense_Discription__c.field-meta.xml
<CustomField>
    <fullName>Expense_Discription__c</fullName>
    <label>Expense Discription</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>